--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "@prisma/client": "^3.11.0",
     "next": "12.1.0",
     "next-auth": "^4.2.1",
     "react": "17.0.2",
@@ -22,6 +23,7 @@
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "postcss": "^8.4.8",
+    "prisma": "^3.11.0",
     "tailwindcss": "^3.0.23"
   }
 }
